app structure ready

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
 <!--added login button -->
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Tabs+side menu</ion-title>
+    <ion-title>CV Larisa Pyykölä</ion-title>
   </ion-toolbar>
 </ion-header>
 
