--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,11 +1,11 @@
 <!--Larisa Pyykölä, student number 1702357-->
-<!--added menu -->
+<!--added menu and title-->
 <ion-header>
     <ion-toolbar color="primary">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>tab2</ion-title>
+      <ion-title>Education</ion-title>
     </ion-toolbar>
   </ion-header>
 
