--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -5,7 +5,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>About me</ion-title>
+      <ion-title>Contact information</ion-title>
     </ion-toolbar>
   </ion-header>
 
