--- a/src/app/pages/curriculum/curriculum.page.html
+++ b/src/app/pages/curriculum/curriculum.page.html
@@ -1,14 +1,14 @@
 <!--Larisa Pyykölä, student number 1702357-->
-<!--added menu and title-->
+<!--added menu -->
 <ion-header>
     <ion-toolbar color="primary">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>About me</ion-title>
+      <ion-title>Extra curriculum</ion-title>
     </ion-toolbar>
   </ion-header>
-
-<ion-content>
-
-</ion-content>
+  
+  <ion-content>
+  
+  </ion-content>
