--- a/src/app/pages/first-with-tabs/first-with-tabs.page.html
+++ b/src/app/pages/first-with-tabs/first-with-tabs.page.html
@@ -3,15 +3,20 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="tab1"> <!--tab button about me -->
       <ion-icon name="Person"></ion-icon>
-      <ion-label>About</ion-label>
+      <ion-label>About me</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="tab2"><!--tab button about my education -->
         <ion-icon name="school"></ion-icon>
-        <ion-label>My CV</ion-label>
+        <ion-label>Education</ion-label>
       </ion-tab-button>
+
+     <ion-tab-button tab="tab3"><!--tab button contacts -->
+       <ion-icon name="paper-plane"></ion-icon>
+       <ion-label>Contact me</ion-label>
+     </ion-tab-button>
 
   </ion-tab-bar>
 </ion-tabs>
