--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -13,6 +13,7 @@
       <ion-list>
         <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
           <ion-item [routerLink]="p.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(p.url)">
+            <ion-icon slot="start" [name]="p.icon"></ion-icon>
             <ion-label>
               {{p.title}}
             </ion-label>
