--- a/src/app/pages/second/second.page.html
+++ b/src/app/pages/second/second.page.html
@@ -5,7 +5,8 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>second</ion-title>
+    <ion-title>My projects</ion-title>
+    
   </ion-toolbar>
 </ion-header>
 
