about and education tabs are ready

--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -9,6 +9,35 @@
     </ion-toolbar>
   </ion-header>
 
-<ion-content>
+<!--added card and icons with Github and LinkedIn logos-->
+  <ion-content>
+      <ion-card class="photo">
 
-</ion-content>
+          <img src="https://avatars0.githubusercontent.com/u/42982515?s=460&v=4"/> <!--image fot the CV-->
+      
+          <ion-card-content>
+            <ion-card-title>
+                Larisa Pyykölä
+            </ion-card-title>
+             <h1>Student at Laurea UAS
+              </h1>
+             <p>
+              I am a highly motivated and creative minded future BBA graduate. Currently, I am interested in Web and mobile app design and development, UX/UI, SEO and making my way through specialization studies. <br>
+              Visual thinking and innovative approach played a powerful role in my past work experience and have become my passion. I believe that knowledge in technology together with my enthusiasm make an excellent match and will help in my professional growth. <br>
+              I am a social and easy-going person. As a worker I adapt very quickly to a new environment, responsible in my duties and often lead other people to the final result. 
+            </p>
+          </ion-card-content>
+      
+          <ion-item>
+            <ion-icon name='logo-github' item-start style="color: #000000" ></ion-icon><!--TODO add click event on the icon-->
+            Github
+            </ion-item>
+      
+          <ion-item>
+            <ion-icon name='logo-linkedin' item-start style="color: #4875B4"></ion-icon><!--TODO add click event on the icon-->
+            Linkedin
+            
+          </ion-item>
+      
+        </ion-card>
+  </ion-content>
