--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -10,5 +10,52 @@
   </ion-header>
 
 <ion-content>
+  
+    <ion-card>
+        <ion-card-header>
+            <h1> Laurea University of Applied Sciences.</h1>
+        </ion-card-header>
+        <ion-card-content>
+          Bachelor of Business Administration Major: Business Information Technology<br>
+          HELSINKI, FINLAND<br>
+          2017-2020 
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card>
+          <ion-card-header>
+              <h1> Helsinki Business College.  </h1>
+          </ion-card-header>
+          <ion-card-content>
+            Vocational Qualification in Business and Administration<br>
+            HELSINKI, FINLAND<br>
+            2016-2017
+          </ion-card-content>
+        </ion-card>
+
+        <ion-card>
+            <ion-card-header>
+                <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
+            </ion-card-header>
+            <ion-card-content>
+                Bachelor's Degree in Conservation and Restoration of Cultural Heritage <br>
+                SAINT-PETERSBURG, RUSSIA
+                <br>
+                2005-2009
+            </ion-card-content>
+          </ion-card>
+
+          <ion-card>
+              <ion-card-header>
+                  <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
+              </ion-card-header>
+              <ion-card-content>
+                  Bachelor's Degree in Conservation and Restoration of Cultural Heritage <br>
+                  SAINT-PETERSBURG, RUSSIA
+                  <br>
+                  2005-2009
+              </ion-card-content>
+            </ion-card>
+
 
 </ion-content>
