--- a/src/app/pages/curriculum/curriculum.page.html
+++ b/src/app/pages/curriculum/curriculum.page.html
@@ -8,7 +8,109 @@
       <ion-title>Extra curriculum</ion-title>
     </ion-toolbar>
   </ion-header>
-  
+
+ <!--used grid for adding for completed courses-->
+  <!--TODO - add some styling to this page, so it looks better, make size of icons bigger-->
+
   <ion-content>
-  
+    <h2>Completed specialization courses</h2>
+    <ion-grid>
+
+      <ion-row>       
+        <ion-col>
+            &#8226; Web Development
+        </ion-col>
+               
+        <ion-col>
+              <ion-icon name="logo-css3" style="color: #3b5998" ></ion-icon>
+              <ion-icon name="logo-html5" style="color: #E44D26"></ion-icon>
+        </ion-col>  
+      </ion-row>
+
+      <ion-row>       
+          <ion-col>
+              &#8226; Dynamic Web Applications with Javascript
+          </ion-col>
+                 
+          <ion-col>
+              <ion-icon name="logo-javascript" ></ion-icon>
+          </ion-col>  
+        </ion-row>
+
+      <ion-row>       
+            <ion-col>
+                &#8226; Mobile App Design and Development with Ionic
+            </ion-col>
+                   
+            <ion-col>
+                <ion-icon name="ionic" style="color: #498aff"></ion-icon><!--for some reson this icon is not-->
+            </ion-col>  
+        </ion-row>
+
+        <ion-row>       
+            <ion-col>
+                &#8226; Android Mobile App Development
+            </ion-col>
+                   
+            <ion-col>
+                <ion-icon name="logo-android" style="color: #A4C639"></ion-icon>
+            </ion-col>  
+        </ion-row>  
+
+      <ion-row>       
+          <ion-col>
+              &#8226; Information Management and Databases
+          </ion-col>
+ 
+      </ion-row>
+
+      <ion-row>       
+           <ion-col>
+              &#8226; Object-Oriented Programming with Java
+           </ion-col>        
+      </ion-row>
+
+      <ion-row>       
+          <ion-col>
+              &#8226; Search Engine Optimization
+          </ion-col>
+                 
+          <ion-col>
+              <ion-icon ios="ios-analytics" md="md-analytics"></ion-icon>
+          </ion-col>  
+      </ion-row>   
+
+      <h2>Planned specialization courses</h2>
+
+      <ion-grid>
+          <ion-row>       
+              <ion-col>
+                  &#8226; Cross Platform Mobile Apps
+              </ion-col>
+                     
+              <ion-col>
+                  <ion-icon name="logo-angular"></ion-icon>
+                  <ion-icon name="logo-sass"></ion-icon>
+              </ion-col>  
+          </ion-row> 
+
+          <ion-row>       
+              <ion-col>
+                  &#8226; Web Content Management Systems
+              </ion-col>
+                     
+              <ion-col>
+                  <ion-icon name="logo-wordpress"></ion-icon>
+              </ion-col>  
+          </ion-row>    
+          
+          <ion-row>       
+              <ion-col>
+                  &#8226; Web App Development with PHP/SQL
+              </ion-col>
+ 
+          </ion-row>        
+      </ion-grid>
+
+    </ion-grid>
   </ion-content>
