--- a/src/app/pages/second/second.page.html
+++ b/src/app/pages/second/second.page.html
@@ -9,7 +9,17 @@
     
   </ion-toolbar>
 </ion-header>
-
+<!--added list wiht my projects and links to Github pages with them -->
 <ion-content>
+    <ion-list>
+        <ion-list-header>
+          <ion-label>My projects can be found in my Github account</ion-label>
+        </ion-list-header>
+        <ion-item href="https://github.com/LarisaPk/Java-Personal-study-planning-tool">Java-Personal-study-planning-tool</ion-item>
+        <ion-item href="https://github.com/LarisaPk/JavaScript-Shopping-List">JavaScript-Shopping-List</ion-item>
+        <ion-item href="https://github.com/LarisaPk/Movie-Information-App">Movie-Information-App</ion-item>
+        <ion-item href="https://github.com/LarisaPk/Weather_App">Weather_App</ion-item>
+        <ion-item href="https://github.com/LarisaPk/Bootstrap_Project">Bootstrap_Project</ion-item>
+      </ion-list>
 
 </ion-content>
