--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -28,12 +28,12 @@
             </p>
           </ion-card-content>
       
-          <ion-item onclick=() href="https://github.com/LarisaPk">
-            <ion-icon name='logo-github' item-start style="color: #000000" ></ion-icon><!--TODO add click event on the icon-->
+          <ion-item href="https://github.com/LarisaPk">
+            <ion-icon name='logo-github' item-start style="color: #000000" ></ion-icon><!--click event on the icon-->
             <ion-label>Github</ion-label>
           </ion-item>
       
-          <ion-item>
+          <ion-item href="https://www.linkedin.com/in/larisa-pyykola/">
             <ion-icon name='logo-linkedin' item-start style="color: #4875B4"></ion-icon><!--TODO add click event on the icon-->
             Linkedin
             
