--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -10,8 +10,8 @@
   </ion-header>
 
 <ion-content>
-  
-    <ion-card>
+  <!--added cards for the education tab-->
+    <ion-card color='charcoal'>
         <ion-card-header>
             <h1> Laurea University of Applied Sciences.</h1>
         </ion-card-header>
@@ -22,7 +22,7 @@
         </ion-card-content>
       </ion-card>
 
-      <ion-card>
+      <ion-card color='charcoal'>
           <ion-card-header>
               <h1> Helsinki Business College.  </h1>
           </ion-card-header>
@@ -33,7 +33,7 @@
           </ion-card-content>
         </ion-card>
 
-        <ion-card>
+        <ion-card color='charcoal'>
             <ion-card-header>
                 <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
             </ion-card-header>
@@ -45,7 +45,7 @@
             </ion-card-content>
           </ion-card>
 
-          <ion-card>
+          <ion-card color='charcoal'>
               <ion-card-header>
                   <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
               </ion-card-header>
