--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -5,10 +5,41 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Contact information</ion-title>
+      <ion-title>Contacts</ion-title>
     </ion-toolbar>
   </ion-header>
 
+<!--used grid for adding my contacts-->
+<!--TODO - add some styling to this page, so it looks better-->
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-icon name="call"></ion-icon> Phone:
+      </ion-col>
+      <ion-col>
+        +358 40 584 88 34 
+      </ion-col>
+    </ion-row>
 
-</ion-content>
+    <ion-row>
+        <ion-col>
+          <ion-icon name="mail"></ion-icon> Email:
+        </ion-col>
+        <ion-col>
+          larisa.pyykola@gmail.com 
+        </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>
+        <ion-icon name="flag"></ion-icon> Address:
+      </ion-col>
+      <ion-col>
+        Espoo 
+      </ion-col>
+    </ion-row>
+    
+  </ion-grid>
+
+</ion-content> 
