--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <!--Larisa Pyykölä, student number 1702357-->
-<!--added login button -->
+<!--added login button, register button, instructions and fields for login in-->
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>CV Larisa Pyykölä</ion-title>
@@ -7,6 +7,32 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button expand="block" routerLink="/menu/first">Login</ion-button>
+  
+    <div class="test">
+        <p>* For testing purposes please use <br>login: test@test.fi <br> password: qwerty</p>
+      </div>
 
+  <div class="login_form">
+    <ion-list ion-no-margin>
+
+      <ion-item ion-no-padding ion-no-margin>
+        <ion-input type="email" placeholder="Email address" value="" ion-no-margin [(ngModel)]="userEmail"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input type="password" placeholder="Password" ion-no-margin [(ngModel)]="userPassword"></ion-input>
+      </ion-item>
+
+    </ion-list>
+  </div>
+
+  <ion-button expand="block" shape="round" color="success"size="large" (click)="login()">Login</ion-button>
+
+  <div class="no_account">
+      <p style="color:#ebebeb">No Account?</p>
+  </div>
+
+  <div class="create_account">
+      <ion-button expand="block" shape="round" size="large" routerLink="/register">Sign up</ion-button>
+  </div>
 </ion-content>
