--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -23,10 +23,10 @@
             </ion-item>
   
         </ion-list>
-        <ion-button  color="secondary" expand="block" shape="round" (click)="register()">Sign up</ion-button>
+        <ion-button  color="secondary"expand="block" shape="round"  size="large" (click)="register()">Sign up</ion-button>
       </div>
       
       <div class="create_account">
-        <ion-button expand="block" shape="round" routerLink="/login" text-uppercase clear>Back</ion-button>
+        <ion-button expand="block" shape="round" size="large" routerLink="/login" text-uppercase clear>Back</ion-button>
       </div>
   </ion-content>
