added styling and 2 new pages

--- a/src/app/pages/curriculum/curriculum.page.scss
+++ b/src/app/pages/curriculum/curriculum.page.scss
@@ -2,7 +2,7 @@
 
 :host {
     ion-content {
-      --background: url('../../../assets/imgs/curruculum.jpg')no-repeat center center / cover;// backgroung for login page
+      --background: url('../../../assets/imgs/curruculum.jpg')no-repeat center center / cover;// backgroung 
     }
   }
 
