--- a/src/app/pages/second/second.page.html
+++ b/src/app/pages/second/second.page.html
@@ -15,11 +15,27 @@
         <ion-list-header>
           <ion-label>My projects can be found in my Github account</ion-label>
         </ion-list-header>
-        <ion-item href="https://github.com/LarisaPk/Java-Personal-study-planning-tool">Java-Personal-study-planning-tool</ion-item>
-        <ion-item href="https://github.com/LarisaPk/JavaScript-Shopping-List">JavaScript-Shopping-List</ion-item>
-        <ion-item href="https://github.com/LarisaPk/Movie-Information-App">Movie-Information-App</ion-item>
-        <ion-item href="https://github.com/LarisaPk/Weather_App">Weather_App</ion-item>
-        <ion-item href="https://github.com/LarisaPk/Bootstrap_Project">Bootstrap_Project</ion-item>
+
+        <ion-item href="https://github.com/LarisaPk/Java-Personal-study-planning-tool">Java-Personal-study-planning-tool
+          <ion-icon name="eye" slot="start"></ion-icon>
+        </ion-item>
+
+        <ion-item href="https://github.com/LarisaPk/JavaScript-Shopping-List">JavaScript-Shopping-List
+          <ion-icon name="eye" slot="start"></ion-icon>
+        </ion-item>
+
+        <ion-item href="https://github.com/LarisaPk/Movie-Information-App">Movie-Information-App
+          <ion-icon name="eye" slot="start"></ion-icon>
+        </ion-item>
+
+        <ion-item href="https://github.com/LarisaPk/Weather_App">Weather_App
+          <ion-icon name="eye" slot="start"></ion-icon>
+        </ion-item>
+
+        <ion-item href="https://github.com/LarisaPk/Bootstrap_Project">Bootstrap_Project
+          <ion-icon name="eye" slot="start"></ion-icon>
+        </ion-item>
+
       </ion-list>
 
 </ion-content>
