--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -22,9 +22,11 @@
              <h1>Student at Laurea UAS
               </h1>
              <p>
-              I am a highly motivated and creative minded future BBA graduate. Currently, I am interested in Web and mobile app design and development, UX/UI, SEO and making my way through specialization studies. <br>
-              Visual thinking and innovative approach played a powerful role in my past work experience and have become my passion. I believe that knowledge in technology together with my enthusiasm make an excellent match and will help in my professional growth. <br>
-              I am a social and easy-going person. As a worker I adapt very quickly to a new environment, responsible in my duties and often lead other people to the final result. 
+                I am a highly motivated and creative minded future BBA graduate. I am specializing in Web and Mobile App design and development and making my way through professional studies.<br>
+
+                Visual thinking and innovative approach played a powerful role in my past work experience and have become my passion. I believe that knowledge of technology together with my enthusiasm make an excellent match and will help in my professional growth. <br>
+                
+                I am a social and easy-going person. As a worker, I adapt very quickly to a new environment, responsible in my duties and often lead other people to the final result. 
             </p>
           </ion-card-content>
       
