--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -11,49 +11,49 @@
 
 <ion-content>
   <!--added cards for the education tab-->
-    <ion-card color='charcoal'>
+    <ion-card class="edu">
         <ion-card-header>
             <h1> Laurea University of Applied Sciences.</h1>
         </ion-card-header>
         <ion-card-content>
-          Bachelor of Business Administration Major: Business Information Technology<br>
+          <p>Bachelor of Business Administration<br>Major: Business Information Technology</p><br>
           HELSINKI, FINLAND<br>
           2017-2020 
         </ion-card-content>
       </ion-card>
 
-      <ion-card color='charcoal'>
+      <ion-card class="edu">
           <ion-card-header>
               <h1> Helsinki Business College.  </h1>
           </ion-card-header>
           <ion-card-content>
-            Vocational Qualification in Business and Administration<br>
+              <p>Vocational Qualification in Business and Administration</p><br>
             HELSINKI, FINLAND<br>
             2016-2017
           </ion-card-content>
         </ion-card>
 
-        <ion-card color='charcoal'>
+        <ion-card class="edu">
             <ion-card-header>
                 <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
             </ion-card-header>
             <ion-card-content>
-                Bachelor's Degree in Conservation and Restoration of Cultural Heritage <br>
+                <p>Bachelor's Degree in Cultural Heritage Management</p><br>
                 SAINT-PETERSBURG, RUSSIA
                 <br>
                 2005-2009
             </ion-card-content>
           </ion-card>
 
-          <ion-card color='charcoal'>
+          <ion-card class="edu">
               <ion-card-header>
-                  <h1> Saint-Petersburg State University of Culture and Arts.  </h1>
+                  <h1> Art and Restoration Professional College.  </h1>
               </ion-card-header>
               <ion-card-content>
-                  Bachelor's Degree in Conservation and Restoration of Cultural Heritage <br>
+                  <p> Decorator. Restorer of decorative paintings. </p> <br>
                   SAINT-PETERSBURG, RUSSIA
                   <br>
-                  2005-2009
+                  2003-2005
               </ion-card-content>
             </ion-card>
 
