--- a/src/app/pages/soft/soft.page.html
+++ b/src/app/pages/soft/soft.page.html
@@ -8,6 +8,19 @@
       <ion-title>Soft skills</ion-title>
     </ion-toolbar>
   </ion-header>
-<ion-content>
+<!--added skills in a list-->
+<ion-content padding>
+  <div class="softSkills">
+    <h2>Soft skills</h2>
+
+    <ul>
+      <li>Responsibility </li>
+      <li>Good learning skills </li>
+      <li>Positive attitude at work </li>
+      <li>Good communication skills </li>
+      <li>Enthusiastic about new challenges </li>
+    </ul>
+
+  </div>
 
 </ion-content>
