--- a/src/app/pages/technical/technical.page.html
+++ b/src/app/pages/technical/technical.page.html
@@ -10,6 +10,19 @@
   </ion-header>
 <ion-content>
 
-<ion-content>
-
-</ion-content>
+<!--added skills in a list-->
+<ion-content padding>
+    <div class="techSkills">
+      <h2>Technical skills</h2>
+  
+      <ul>
+        <li>HTML5 , CSS, JavaScript, Bootstrap, Ionic 4 framework</li>
+        <li>Java, Kotlin, SQL</li>
+        <li>Photoshop, UI Design, Prototyping</li>
+        <li>SEO, Google Analytics</li>
+        <li>UX evaluation, UI design</li>
+      </ul>
+  
+    </div>
+  
+  </ion-content>
